# plugins-api-rust

./: Cargo.toml  README.md
src/: database.rs  main.rs  structs.rs
src/plugins/: repository.rs
