[package]
authors = ["abnerfs <abnerfs@gmail.com>"]
edition = "2018"
name = "plugins-api"
version = "0.1.0"

[dependencies]
dotenv = "0.15.0"
lazy_static = "*"
mysql = "18.2.0"
rocket = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4.5"